# nav

./: .env_example  Cargo.toml  LICENSE  README.md
src/: main.rs  public.rs
src/commands/: config.rs  dev.rs  meta.rs  mod.rs  tags.rs
src/utils/: database.rs  schema.sql
