[package]
name = "nav"
version = "0.1.0"
authors = ["nxtlo <dhmony-99@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
http = "0.2"
anyhow = "1.0" # For error handling
async-std = { version = "1.7.0", features = ["attributes"] }
sqlx = { version = "0.4.2", features = ["macros", "postgres", "uuid", "offline", "chrono", "runtime-tokio-native-tls"] }
futures = "0.3"
tracing-log = "0.1"
tracing-subscriber = "0.2"
tracing = "0.1"


[dependencies.tokio]
version = "1.0"
features = ["full"]


[dependencies.serenity]
serenity = "0.10.2"
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "native_tls_backend", "absolute_ratelimits", "collector", "voice"]